T3_semantico/src/sintatico.output
Terminals unused in grammar

    MAIN
    ASPA_SIMPLES
    STRING


Grammar

    0 $accept: programa $end

    1 programa: lista_de_declaracoes

    2 lista_de_declaracoes: lista_de_declaracoes declaracao
    3                     | %empty

    4 declaracao: declaracao_de_variavel
    5           | declaracao_de_funcao
    6           | error

    7 declaracao_de_variavel: tipo_de_variavel_id PONTO_VIRGULA

    8 declaracao_de_funcao: tipo_de_variavel_id ABRE_PARENTESES parametros FECHA_PARENTESES definicao_de_funcao

    9 definicao_de_funcao: bloco_de_comando

   10 parametros: lista_de_parametros
   11           | %empty

   12 lista_de_parametros: lista_de_parametros VIRGULA parametro
   13                    | parametro

   14 parametro: tipo_de_variavel_id

   15 tipo_de_variavel_id: tipo_de_variavel id

   16 id: ID

   17 comando: bloco_de_comando
   18        | comando_unico
   19        | error

   20 comandos: comandos comando
   21         | %empty

   22 bloco_de_comando: ABRE_CHAVES comandos FECHA_CHAVES

   23 comando_unico: comando_condicional
   24              | comando_iterativo
   25              | declaracao_de_variavel
   26              | chamada_de_retorno
   27              | comando_de_atribuicao
   28              | expressao PONTO_VIRGULA

   29 comando_condicional: IF ABRE_PARENTESES expressao FECHA_PARENTESES comando
   30                    | IF ABRE_PARENTESES expressao FECHA_PARENTESES comando ELSE comando

   31 comando_iterativo: FOR ABRE_PARENTESES expressao_for PONTO_VIRGULA expressao_for PONTO_VIRGULA expressao_for FECHA_PARENTESES comando

   32 expressao_for: id ATRIB expressao
   33              | expressao

   34 expressao: exp
   35          | %empty

   36 exp: exp GT exp
   37    | exp LT exp
   38    | exp EQ exp
   39    | exp NE exp
   40    | exp LE exp
   41    | exp GE exp
   42    | exp AND exp
   43    | exp OR exp
   44    | exp_list

   45 exp_list: exp_list CONSTRUTOR exp_list
   46         | exp_list FILTER exp_list
   47         | exp_list MAP exp_list
   48         | exp_aritmetica

   49 exp_aritmetica: termo
   50               | exp_aritmetica SOMA termo
   51               | exp_aritmetica SUB termo

   52 termo: fator
   53      | termo MULT fator
   54      | termo DIV fator

   55 fator: constante
   56      | func_call_exp
   57      | SUB fator
   58      | SOMA fator
   59      | TAIL_OR_NOT fator
   60      | TAIL_POP fator
   61      | HEADER fator
   62      | ID
   63      | ABRE_PARENTESES exp FECHA_PARENTESES

   64 comando_de_atribuicao: id ATRIB expressao PONTO_VIRGULA

   65 func_call_exp: id ABRE_PARENTESES func_call_parameters FECHA_PARENTESES
   66              | READ ABRE_PARENTESES expressao FECHA_PARENTESES
   67              | WRITE ABRE_PARENTESES expressao FECHA_PARENTESES
   68              | WRITELN ABRE_PARENTESES expressao FECHA_PARENTESES

   69 func_call_parameters: func_call_parameters VIRGULA expressao
   70                     | expressao

   71 chamada_de_retorno: RETURN expressao PONTO_VIRGULA

   72 tipo_de_variavel: INT
   73                 | FLOAT
   74                 | int_list
   75                 | float_list

   76 int_list: INT LIST

   77 float_list: FLOAT LIST

   78 constante: INTEGER_CONST
   79          | FLOAT_CONST
   80          | CONSTANTE_NIL
   81          | STRING_LITERAL


Terminals, with rules where they appear

    $end (0) 0
    error (256) 6 19
    ID <node> (258) 16 62
    INT <node> (259) 72 76
    FLOAT <node> (260) 73 77
    LIST <node> (261) 76 77
    CONSTANTE_NIL <node> (262) 80
    TAIL_OR_NOT <node> (263) 59
    HEADER <node> (264) 61
    TAIL_POP <node> (265) 60
    MAP <node> (266) 47
    FILTER <node> (267) 46
    CONSTRUTOR <node> (268) 45
    READ <node> (269) 66
    WRITE <node> (270) 67
    WRITELN <node> (271) 68
    MAIN <node> (272)
    RETURN <node> (273) 71
    IF <node> (274) 29 30
    ELSE <node> (275) 30
    FOR <node> (276) 31
    AND <node> (277) 42
    OR <node> (278) 43
    LT <node> (279) 37
    LE <node> (280) 40
    EQ <node> (281) 38
    GT <node> (282) 36
    GE <node> (283) 41
    NE <node> (284) 39
    SOMA <node> (285) 50 58
    SUB <node> (286) 51 57
    MULT <node> (287) 53
    DIV <node> (288) 54
    VIRGULA <node> (289) 12 69
    PONTO_VIRGULA <node> (290) 7 28 31 64 71
    ASPA_SIMPLES <node> (291)
    ATRIB <node> (292) 32 64
    ABRE_PARENTESES <node> (293) 8 29 30 31 63 65 66 67 68
    FECHA_PARENTESES <node> (294) 8 29 30 31 63 65 66 67 68
    ABRE_CHAVES <node> (295) 22
    FECHA_CHAVES <node> (296) 22
    FLOAT_CONST <node> (297) 79
    INTEGER_CONST <node> (298) 78
    STRING_LITERAL <node> (299) 81
    STRING <node> (300)
    IFX (301)


Nonterminals, with rules where they appear

    $accept (47)
        on left: 0
    programa <node> (48)
        on left: 1
        on right: 0
    lista_de_declaracoes <node> (49)
        on left: 2 3
        on right: 1 2
    declaracao <node> (50)
        on left: 4 5 6
        on right: 2
    declaracao_de_variavel <node> (51)
        on left: 7
        on right: 4 25
    declaracao_de_funcao <node> (52)
        on left: 8
        on right: 5
    definicao_de_funcao <node> (53)
        on left: 9
        on right: 8
    parametros <node> (54)
        on left: 10 11
        on right: 8
    lista_de_parametros <node> (55)
        on left: 12 13
        on right: 10 12
    parametro <node> (56)
        on left: 14
        on right: 12 13
    tipo_de_variavel_id <node> (57)
        on left: 15
        on right: 7 8 14
    id <node> (58)
        on left: 16
        on right: 15 32 64 65
    comando <node> (59)
        on left: 17 18 19
        on right: 20 29 30 31
    comandos <node> (60)
        on left: 20 21
        on right: 20 22
    bloco_de_comando <node> (61)
        on left: 22
        on right: 9 17
    comando_unico <node> (62)
        on left: 23 24 25 26 27 28
        on right: 18
    comando_condicional <node> (63)
        on left: 29 30
        on right: 23
    comando_iterativo <node> (64)
        on left: 31
        on right: 24
    expressao_for <node> (65)
        on left: 32 33
        on right: 31
    expressao <node> (66)
        on left: 34 35
        on right: 28 29 30 32 33 64 66 67 68 69 70 71
    exp <node> (67)
        on left: 36 37 38 39 40 41 42 43 44
        on right: 34 36 37 38 39 40 41 42 43 63
    exp_list <node> (68)
        on left: 45 46 47 48
        on right: 44 45 46 47
    exp_aritmetica <node> (69)
        on left: 49 50 51
        on right: 48 50 51
    termo <node> (70)
        on left: 52 53 54
        on right: 49 50 51 53 54
    fator <node> (71)
        on left: 55 56 57 58 59 60 61 62 63
        on right: 52 53 54 57 58 59 60 61
    comando_de_atribuicao <node> (72)
        on left: 64
        on right: 27
    func_call_exp <node> (73)
        on left: 65 66 67 68
        on right: 56
    func_call_parameters <node> (74)
        on left: 69 70
        on right: 65 69
    chamada_de_retorno <node> (75)
        on left: 71
        on right: 26
    tipo_de_variavel <node> (76)
        on left: 72 73 74 75
        on right: 15
    int_list (77)
        on left: 76
        on right: 74
    float_list (78)
        on left: 77
        on right: 75
    constante <node> (79)
        on left: 78 79 80 81
        on right: 55


State 0

    0 $accept: • programa $end

    $end   reduce using rule 3 (lista_de_declaracoes)
    error  reduce using rule 3 (lista_de_declaracoes)
    INT    reduce using rule 3 (lista_de_declaracoes)
    FLOAT  reduce using rule 3 (lista_de_declaracoes)

    programa              go to state 1
    lista_de_declaracoes  go to state 2


State 1

    0 $accept: programa • $end

    $end  shift, and go to state 3


State 2

    1 programa: lista_de_declaracoes •
    2 lista_de_declaracoes: lista_de_declaracoes • declaracao

    error  shift, and go to state 4
    INT    shift, and go to state 5
    FLOAT  shift, and go to state 6

    $end  reduce using rule 1 (programa)

    declaracao              go to state 7
    declaracao_de_variavel  go to state 8
    declaracao_de_funcao    go to state 9
    tipo_de_variavel_id     go to state 10
    tipo_de_variavel        go to state 11
    int_list                go to state 12
    float_list              go to state 13


State 3

    0 $accept: programa $end •

    $default  accept


State 4

    6 declaracao: error •

    $end   reduce using rule 6 (declaracao)
    error  reduce using rule 6 (declaracao)
    INT    reduce using rule 6 (declaracao)
    FLOAT  reduce using rule 6 (declaracao)


State 5

   72 tipo_de_variavel: INT •
   76 int_list: INT • LIST

    LIST  shift, and go to state 14

    ID  reduce using rule 72 (tipo_de_variavel)


State 6

   73 tipo_de_variavel: FLOAT •
   77 float_list: FLOAT • LIST

    LIST  shift, and go to state 15

    ID  reduce using rule 73 (tipo_de_variavel)


State 7

    2 lista_de_declaracoes: lista_de_declaracoes declaracao •

    $end   reduce using rule 2 (lista_de_declaracoes)
    error  reduce using rule 2 (lista_de_declaracoes)
    INT    reduce using rule 2 (lista_de_declaracoes)
    FLOAT  reduce using rule 2 (lista_de_declaracoes)


State 8

    4 declaracao: declaracao_de_variavel •

    $end   reduce using rule 4 (declaracao)
    error  reduce using rule 4 (declaracao)
    INT    reduce using rule 4 (declaracao)
    FLOAT  reduce using rule 4 (declaracao)


State 9

    5 declaracao: declaracao_de_funcao •

    $end   reduce using rule 5 (declaracao)
    error  reduce using rule 5 (declaracao)
    INT    reduce using rule 5 (declaracao)
    FLOAT  reduce using rule 5 (declaracao)


State 10

    7 declaracao_de_variavel: tipo_de_variavel_id • PONTO_VIRGULA
    8 declaracao_de_funcao: tipo_de_variavel_id • ABRE_PARENTESES parametros FECHA_PARENTESES definicao_de_funcao

    PONTO_VIRGULA    shift, and go to state 16
    ABRE_PARENTESES  shift, and go to state 17


State 11

   15 tipo_de_variavel_id: tipo_de_variavel • id

    ID  shift, and go to state 18

    id  go to state 19


State 12

   74 tipo_de_variavel: int_list •

    ID  reduce using rule 74 (tipo_de_variavel)


State 13

   75 tipo_de_variavel: float_list •

    ID  reduce using rule 75 (tipo_de_variavel)


State 14

   76 int_list: INT LIST •

    ID  reduce using rule 76 (int_list)


State 15

   77 float_list: FLOAT LIST •

    ID  reduce using rule 77 (float_list)


State 16

    7 declaracao_de_variavel: tipo_de_variavel_id PONTO_VIRGULA •

    $end   reduce using rule 7 (declaracao_de_variavel)
    error  reduce using rule 7 (declaracao_de_variavel)
    INT    reduce using rule 7 (declaracao_de_variavel)
    FLOAT  reduce using rule 7 (declaracao_de_variavel)


State 17

    8 declaracao_de_funcao: tipo_de_variavel_id ABRE_PARENTESES • parametros FECHA_PARENTESES definicao_de_funcao

    INT    shift, and go to state 5
    FLOAT  shift, and go to state 6

    FECHA_PARENTESES  reduce using rule 11 (parametros)

    parametros           go to state 20
    lista_de_parametros  go to state 21
    parametro            go to state 22
    tipo_de_variavel_id  go to state 23
    tipo_de_variavel     go to state 145
    int_list             go to state 12
    float_list           go to state 13


State 18

   16 id: ID •

    PONTO_VIRGULA    reduce using rule 16 (id)
    ABRE_PARENTESES  reduce using rule 16 (id)


State 19

   15 tipo_de_variavel_id: tipo_de_variavel id •

    PONTO_VIRGULA    reduce using rule 15 (tipo_de_variavel_id)
    ABRE_PARENTESES  reduce using rule 15 (tipo_de_variavel_id)


State 20

    8 declaracao_de_funcao: tipo_de_variavel_id ABRE_PARENTESES parametros • FECHA_PARENTESES definicao_de_funcao

    FECHA_PARENTESES  shift, and go to state 24


State 21

   10 parametros: lista_de_parametros •
   12 lista_de_parametros: lista_de_parametros • VIRGULA parametro

    VIRGULA  shift, and go to state 25

    FECHA_PARENTESES  reduce using rule 10 (parametros)


State 22

   13 lista_de_parametros: parametro •

    VIRGULA           reduce using rule 13 (lista_de_parametros)
    FECHA_PARENTESES  reduce using rule 13 (lista_de_parametros)


State 23

   14 parametro: tipo_de_variavel_id •

    VIRGULA           reduce using rule 14 (parametro)
    FECHA_PARENTESES  reduce using rule 14 (parametro)


State 24

    8 declaracao_de_funcao: tipo_de_variavel_id ABRE_PARENTESES parametros FECHA_PARENTESES • definicao_de_funcao

    ABRE_CHAVES  shift, and go to state 26

    definicao_de_funcao  go to state 27
    bloco_de_comando     go to state 28


State 25

   12 lista_de_parametros: lista_de_parametros VIRGULA • parametro

    INT    shift, and go to state 5
    FLOAT  shift, and go to state 6

    parametro            go to state 29
    tipo_de_variavel_id  go to state 23
    tipo_de_variavel     go to state 145
    int_list             go to state 12
    float_list           go to state 13


State 26

   22 bloco_de_comando: ABRE_CHAVES • comandos FECHA_CHAVES

    error            reduce using rule 21 (comandos)
    ID               reduce using rule 21 (comandos)
    INT              reduce using rule 21 (comandos)
    FLOAT            reduce using rule 21 (comandos)
    CONSTANTE_NIL    reduce using rule 21 (comandos)
    TAIL_OR_NOT      reduce using rule 21 (comandos)
    HEADER           reduce using rule 21 (comandos)
    TAIL_POP         reduce using rule 21 (comandos)
    READ             reduce using rule 21 (comandos)
    WRITE            reduce using rule 21 (comandos)
    WRITELN          reduce using rule 21 (comandos)
    RETURN           reduce using rule 21 (comandos)
    IF               reduce using rule 21 (comandos)
    FOR              reduce using rule 21 (comandos)
    SOMA             reduce using rule 21 (comandos)
    SUB              reduce using rule 21 (comandos)
    PONTO_VIRGULA    reduce using rule 21 (comandos)
    ABRE_PARENTESES  reduce using rule 21 (comandos)
    ABRE_CHAVES      reduce using rule 21 (comandos)
    FECHA_CHAVES     reduce using rule 21 (comandos)
    FLOAT_CONST      reduce using rule 21 (comandos)
    INTEGER_CONST    reduce using rule 21 (comandos)
    STRING_LITERAL   reduce using rule 21 (comandos)

    comandos  go to state 30


State 27

    8 declaracao_de_funcao: tipo_de_variavel_id ABRE_PARENTESES parametros FECHA_PARENTESES definicao_de_funcao •

    $end   reduce using rule 8 (declaracao_de_funcao)
    error  reduce using rule 8 (declaracao_de_funcao)
    INT    reduce using rule 8 (declaracao_de_funcao)
    FLOAT  reduce using rule 8 (declaracao_de_funcao)


State 28

    9 definicao_de_funcao: bloco_de_comando •

    $end   reduce using rule 9 (definicao_de_funcao)
    error  reduce using rule 9 (definicao_de_funcao)
    INT    reduce using rule 9 (definicao_de_funcao)
    FLOAT  reduce using rule 9 (definicao_de_funcao)


State 29

   12 lista_de_parametros: lista_de_parametros VIRGULA parametro •

    VIRGULA           reduce using rule 12 (lista_de_parametros)
    FECHA_PARENTESES  reduce using rule 12 (lista_de_parametros)


State 30

   20 comandos: comandos • comando
   22 bloco_de_comando: ABRE_CHAVES comandos • FECHA_CHAVES

    error            shift, and go to state 31
    ID               shift, and go to state 32
    INT              shift, and go to state 5
    FLOAT            shift, and go to state 6
    CONSTANTE_NIL    shift, and go to state 33
    TAIL_OR_NOT      shift, and go to state 34
    HEADER           shift, and go to state 35
    TAIL_POP         shift, and go to state 36
    READ             shift, and go to state 37
    WRITE            shift, and go to state 38
    WRITELN          shift, and go to state 39
    RETURN           shift, and go to state 40
    IF               shift, and go to state 41
    FOR              shift, and go to state 42
    SOMA             shift, and go to state 43
    SUB              shift, and go to state 44
    ABRE_PARENTESES  shift, and go to state 45
    ABRE_CHAVES      shift, and go to state 146
    FECHA_CHAVES     shift, and go to state 46
    FLOAT_CONST      shift, and go to state 47
    INTEGER_CONST    shift, and go to state 48
    STRING_LITERAL   shift, and go to state 49

    PONTO_VIRGULA  reduce using rule 35 (expressao)

    declaracao_de_variavel  go to state 50
    tipo_de_variavel_id     go to state 51
    id                      go to state 52
    comando                 go to state 53
    bloco_de_comando        go to state 54
    comando_unico           go to state 55
    comando_condicional     go to state 56
    comando_iterativo       go to state 57
    expressao               go to state 58
    exp                     go to state 59
    exp_list                go to state 60
    exp_aritmetica          go to state 61
    termo                   go to state 62
    fator                   go to state 63
    comando_de_atribuicao   go to state 64
    func_call_exp           go to state 65
    chamada_de_retorno      go to state 66
    tipo_de_variavel        go to state 147
    int_list                go to state 12
    float_list              go to state 13
    constante               go to state 67


State 31

   19 comando: error •

    error            reduce using rule 19 (comando)
    ID               reduce using rule 19 (comando)
    INT              reduce using rule 19 (comando)
    FLOAT            reduce using rule 19 (comando)
    CONSTANTE_NIL    reduce using rule 19 (comando)
    TAIL_OR_NOT      reduce using rule 19 (comando)
    HEADER           reduce using rule 19 (comando)
    TAIL_POP         reduce using rule 19 (comando)
    READ             reduce using rule 19 (comando)
    WRITE            reduce using rule 19 (comando)
    WRITELN          reduce using rule 19 (comando)
    RETURN           reduce using rule 19 (comando)
    IF               reduce using rule 19 (comando)
    FOR              reduce using rule 19 (comando)
    SOMA             reduce using rule 19 (comando)
    SUB              reduce using rule 19 (comando)
    PONTO_VIRGULA    reduce using rule 19 (comando)
    ABRE_PARENTESES  reduce using rule 19 (comando)
    ABRE_CHAVES      reduce using rule 19 (comando)
    FECHA_CHAVES     reduce using rule 19 (comando)
    FLOAT_CONST      reduce using rule 19 (comando)
    INTEGER_CONST    reduce using rule 19 (comando)
    STRING_LITERAL   reduce using rule 19 (comando)


State 32

   16 id: ID •
   62 fator: ID •

    MAP              reduce using rule 62 (fator)
    FILTER           reduce using rule 62 (fator)
    CONSTRUTOR       reduce using rule 62 (fator)
    AND              reduce using rule 62 (fator)
    OR               reduce using rule 62 (fator)
    LT               reduce using rule 62 (fator)
    LE               reduce using rule 62 (fator)
    EQ               reduce using rule 62 (fator)
    GT               reduce using rule 62 (fator)
    GE               reduce using rule 62 (fator)
    NE               reduce using rule 62 (fator)
    SOMA             reduce using rule 62 (fator)
    SUB              reduce using rule 62 (fator)
    MULT             reduce using rule 62 (fator)
    DIV              reduce using rule 62 (fator)
    PONTO_VIRGULA    reduce using rule 62 (fator)
    ATRIB            reduce using rule 16 (id)
    ABRE_PARENTESES  reduce using rule 16 (id)


State 33

   80 constante: CONSTANTE_NIL •

    MAP            reduce using rule 80 (constante)
    FILTER         reduce using rule 80 (constante)
    CONSTRUTOR     reduce using rule 80 (constante)
    AND            reduce using rule 80 (constante)
    OR             reduce using rule 80 (constante)
    LT             reduce using rule 80 (constante)
    LE             reduce using rule 80 (constante)
    EQ             reduce using rule 80 (constante)
    GT             reduce using rule 80 (constante)
    GE             reduce using rule 80 (constante)
    NE             reduce using rule 80 (constante)
    SOMA           reduce using rule 80 (constante)
    SUB            reduce using rule 80 (constante)
    MULT           reduce using rule 80 (constante)
    DIV            reduce using rule 80 (constante)
    PONTO_VIRGULA  reduce using rule 80 (constante)


State 34

   59 fator: TAIL_OR_NOT • fator

    ID               shift, and go to state 148
    CONSTANTE_NIL    shift, and go to state 33
    TAIL_OR_NOT      shift, and go to state 34
    HEADER           shift, and go to state 35
    TAIL_POP         shift, and go to state 36
    READ             shift, and go to state 37
    WRITE            shift, and go to state 38
    WRITELN          shift, and go to state 39
    SOMA             shift, and go to state 43
    SUB              shift, and go to state 44
    ABRE_PARENTESES  shift, and go to state 45
    FLOAT_CONST      shift, and go to state 47
    INTEGER_CONST    shift, and go to state 48
    STRING_LITERAL   shift, and go to state 49

    id             go to state 68
    fator          go to state 69
    func_call_exp  go to state 65
    constante      go to state 67


State 35

   61 fator: HEADER • fator

    ID               shift, and go to state 148
    CONSTANTE_NIL    shift, and go to state 33
    TAIL_OR_NOT      shift, and go to state 34
    HEADER           shift, and go to state 35
    TAIL_POP         shift, and go to state 36
    READ             shift, and go to state 37
    WRITE            shift, and go to state 38
    WRITELN          shift, and go to state 39
    SOMA             shift, and go to state 43
    SUB              shift, and go to state 44
    ABRE_PARENTESES  shift, and go to state 45
    FLOAT_CONST      shift, and go to state 47
    INTEGER_CONST    shift, and go to state 48
    STRING_LITERAL   shift, and go to state 49

    id             go to state 68
    fator          go to state 70
    func_call_exp  go to state 65
    constante      go to state 67


State 36

   60 fator: TAIL_POP • fator

    ID               shift, and go to state 148
    CONSTANTE_NIL    shift, and go to state 33
    TAIL_OR_NOT      shift, and go to state 34
    HEADER           shift, and go to state 35
    TAIL_POP         shift, and go to state 36
    READ             shift, and go to state 37
    WRITE            shift, and go to state 38
    WRITELN          shift, and go to state 39
    SOMA             shift, and go to state 43
    SUB              shift, and go to state 44
    ABRE_PARENTESES  shift, and go to state 45
    FLOAT_CONST      shift, and go to state 47
    INTEGER_CONST    shift, and go to state 48
    STRING_LITERAL   shift, and go to state 49

    id             go to state 68
    fator          go to state 71
    func_call_exp  go to state 65
    constante      go to state 67


State 37

   66 func_call_exp: READ • ABRE_PARENTESES expressao FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 72


State 38

   67 func_call_exp: WRITE • ABRE_PARENTESES expressao FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 73


State 39

   68 func_call_exp: WRITELN • ABRE_PARENTESES expressao FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 74


State 40

   71 chamada_de_retorno: RETURN • expressao PONTO_VIRGULA

    ID               shift, and go to state 148
    CONSTANTE_NIL    shift, and go to state 33
    TAIL_OR_NOT      shift, and go to state 34
    HEADER           shift, and go to state 35
    TAIL_POP         shift, and go to state 36
    READ             shift, and go to state 37
    WRITE            shift, and go to state 38
    WRITELN          shift, and go to state 39
    SOMA             shift, and go to state 43
    SUB              shift, and go to state 44
    ABRE_PARENTESES  shift, and go to state 45
    FLOAT_CONST      shift, and go to state 47
    INTEGER_CONST    shift, and go to state 48
    STRING_LITERAL   shift, and go to state 49

    PONTO_VIRGULA  reduce using rule 35 (expressao)

    id              go to state 68
    expressao       go to state 75
    exp             go to state 59
    exp_list        go to state 60
    exp_aritmetica  go to state 61
    termo           go to state 62
    fator           go to state 63
    func_call_exp   go to state 65
    constante       go to state 67


State 41

   29 comando_condicional: IF • ABRE_PARENTESES expressao FECHA_PARENTESES comando
   30                    | IF • ABRE_PARENTESES expressao FECHA_PARENTESES comando ELSE comando

    ABRE_PARENTESES  shift, and go to state 76


State 42

   31 comando_iterativo: FOR • ABRE_PARENTESES expressao_for PONTO_VIRGULA expressao_for PONTO_VIRGULA expressao_for FECHA_PARENTESES comando

    ABRE_PARENTESES  shift, and go to state 77


State 43

   58 fator: SOMA • fator

    ID               shift, and go to state 148
    CONSTANTE_NIL    shift, and go to state 33
    TAIL_OR_NOT      shift, and go to state 34
    HEADER           shift, and go to state 35
    TAIL_POP         shift, and go to state 36
    READ             shift, and go to state 37
    WRITE            shift, and go to state 38
    WRITELN          shift, and go to state 39
    SOMA             shift, and go to state 43
    SUB              shift, and go to state 44
    ABRE_PARENTESES  shift, and go to state 45
    FLOAT_CONST      shift, and go to state 47
    INTEGER_CONST    shift, and go to state 48
    STRING_LITERAL   shift, and go to state 49

    id             go to state 68
    fator          go to state 78
    func_call_exp  go to state 65
    constante      go to state 67


State 44

   57 fator: SUB • fator

    ID               shift, and go to state 148
    CONSTANTE_NIL    shift, and go to state 33
    TAIL_OR_NOT      shift, and go to state 34
    HEADER           shift, and go to state 35
    TAIL_POP         shift, and go to state 36
    READ             shift, and go to state 37
    WRITE            shift, and go to state 38
    WRITELN          shift, and go to state 39
    SOMA             shift, and go to state 43
    SUB              shift, and go to state 44
    ABRE_PARENTESES  shift, and go to state 45
    FLOAT_CONST      shift, and go to state 47
    INTEGER_CONST    shift, and go to state 48
    STRING_LITERAL   shift, and go to state 49

    id             go to state 68
    fator          go to state 79
    func_call_exp  go to state 65
    constante      go to state 67


State 45

   63 fator: ABRE_PARENTESES • exp FECHA_PARENTESES

    ID               shift, and go to state 149
    CONSTANTE_NIL    shift, and go to state 150
    TAIL_OR_NOT      shift, and go to state 151
    HEADER           shift, and go to state 152
    TAIL_POP         shift, and go to state 153
    READ             shift, and go to state 154
    WRITE            shift, and go to state 155
    WRITELN          shift, and go to state 156
    SOMA             shift, and go to state 157
    SUB              shift, and go to state 158
    ABRE_PARENTESES  shift, and go to state 159
    FLOAT_CONST      shift, and go to state 160
    INTEGER_CONST    shift, and go to state 161
    STRING_LITERAL   shift, and go to state 162

    id              go to state 163
    exp             go to state 80
    exp_list        go to state 164
    exp_aritmetica  go to state 165
    termo           go to state 166
    fator           go to state 167
    func_call_exp   go to state 168
    constante       go to state 169


State 46

   22 bloco_de_comando: ABRE_CHAVES comandos FECHA_CHAVES •

    $end   reduce using rule 22 (bloco_de_comando)
    error  reduce using rule 22 (bloco_de_comando)
    INT    reduce using rule 22 (bloco_de_comando)
    FLOAT  reduce using rule 22 (bloco_de_comando)


State 47

   79 constante: FLOAT_CONST •

    MAP            reduce using rule 79 (constante)
    FILTER         reduce using rule 79 (constante)
    CONSTRUTOR     reduce using rule 79 (constante)
    AND            reduce using rule 79 (constante)
    OR             reduce using rule 79 (constante)
    LT             reduce using rule 79 (constante)
    LE             reduce using rule 79 (constante)
    EQ             reduce using rule 79 (constante)
    GT             reduce using rule 79 (constante)
    GE             reduce using rule 79 (constante)
    NE             reduce using rule 79 (constante)
    SOMA           reduce using rule 79 (constante)
    SUB            reduce using rule 79 (constante)
    MULT           reduce using rule 79 (constante)
    DIV            reduce using rule 79 (constante)
    PONTO_VIRGULA  reduce using rule 79 (constante)


State 48

   78 constante: INTEGER_CONST •

    MAP            reduce using rule 78 (constante)
    FILTER         reduce using rule 78 (constante)
    CONSTRUTOR     reduce using rule 78 (constante)
    AND            reduce using rule 78 (constante)
    OR             reduce using rule 78 (constante)
    LT             reduce using rule 78 (constante)
    LE             reduce using rule 78 (constante)
    EQ             reduce using rule 78 (constante)
    GT             reduce using rule 78 (constante)
    GE             reduce using rule 78 (constante)
    NE             reduce using rule 78 (constante)
    SOMA           reduce using rule 78 (constante)
    SUB            reduce using rule 78 (constante)
    MULT           reduce using rule 78 (constante)
    DIV            reduce using rule 78 (constante)
    PONTO_VIRGULA  reduce using rule 78 (constante)


State 49

   81 constante: STRING_LITERAL •

    MAP            reduce using rule 81 (constante)
    FILTER         reduce using rule 81 (constante)
    CONSTRUTOR     reduce using rule 81 (constante)
    AND            reduce using rule 81 (constante)
    OR             reduce using rule 81 (constante)
    LT             reduce using rule 81 (constante)
    LE             reduce using rule 81 (constante)
    EQ             reduce using rule 81 (constante)
    GT             reduce using rule 81 (constante)
    GE             reduce using rule 81 (constante)
    NE             reduce using rule 81 (constante)
    SOMA           reduce using rule 81 (constante)
    SUB            reduce using rule 81 (constante)
    MULT           reduce using rule 81 (constante)
    DIV            reduce using rule 81 (constante)
    PONTO_VIRGULA  reduce using rule 81 (constante)


State 50

   25 comando_unico: declaracao_de_variavel •

    error            reduce using rule 25 (comando_unico)
    ID               reduce using rule 25 (comando_unico)
    INT              reduce using rule 25 (comando_unico)
    FLOAT            reduce using rule 25 (comando_unico)
    CONSTANTE_NIL    reduce using rule 25 (comando_unico)
    TAIL_OR_NOT      reduce using rule 25 (comando_unico)
    HEADER           reduce using rule 25 (comando_unico)
    TAIL_POP         reduce using rule 25 (comando_unico)
    READ             reduce using rule 25 (comando_unico)
    WRITE            reduce using rule 25 (comando_unico)
    WRITELN          reduce using rule 25 (comando_unico)
    RETURN           reduce using rule 25 (comando_unico)
    IF               reduce using rule 25 (comando_unico)
    FOR              reduce using rule 25 (comando_unico)
    SOMA             reduce using rule 25 (comando_unico)
    SUB              reduce using rule 25 (comando_unico)
    PONTO_VIRGULA    reduce using rule 25 (comando_unico)
    ABRE_PARENTESES  reduce using rule 25 (comando_unico)
    ABRE_CHAVES      reduce using rule 25 (comando_unico)
    FECHA_CHAVES     reduce using rule 25 (comando_unico)
    FLOAT_CONST      reduce using rule 25 (comando_unico)
    INTEGER_CONST    reduce using rule 25 (comando_unico)
    STRING_LITERAL   reduce using rule 25 (comando_unico)


State 51

    7 declaracao_de_variavel: tipo_de_variavel_id • PONTO_VIRGULA

    PONTO_VIRGULA  shift, and go to state 170


State 52

   64 comando_de_atribuicao: id • ATRIB expressao PONTO_VIRGULA
   65 func_call_exp: id • ABRE_PARENTESES func_call_parameters FECHA_PARENTESES

    ATRIB            shift, and go to state 81
    ABRE_PARENTESES  shift, and go to state 82


State 53

   20 comandos: comandos comando •

    error            reduce using rule 20 (comandos)
    ID               reduce using rule 20 (comandos)
    INT              reduce using rule 20 (comandos)
    FLOAT            reduce using rule 20 (comandos)
    CONSTANTE_NIL    reduce using rule 20 (comandos)
    TAIL_OR_NOT      reduce using rule 20 (comandos)
    HEADER           reduce using rule 20 (comandos)
    TAIL_POP         reduce using rule 20 (comandos)
    READ             reduce using rule 20 (comandos)
    WRITE            reduce using rule 20 (comandos)
    WRITELN          reduce using rule 20 (comandos)
    RETURN           reduce using rule 20 (comandos)
    IF               reduce using rule 20 (comandos)
    FOR              reduce using rule 20 (comandos)
    SOMA             reduce using rule 20 (comandos)
    SUB              reduce using rule 20 (comandos)
    PONTO_VIRGULA    reduce using rule 20 (comandos)
    ABRE_PARENTESES  reduce using rule 20 (comandos)
    ABRE_CHAVES      reduce using rule 20 (comandos)
    FECHA_CHAVES     reduce using rule 20 (comandos)
    FLOAT_CONST      reduce using rule 20 (comandos)
    INTEGER_CONST    reduce using rule 20 (comandos)
    STRING_LITERAL   reduce using rule 20 (comandos)


State 54

   17 comando: bloco_de_comando •
